<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (c) 2022 Dr. Andreas Feldner.
  ~  *
  ~  *     This program is free software; you can redistribute it and/or modify
  ~  *     it under the terms of the GNU General Public License as published by
  ~  *     the Free Software Foundation; either version 2 of the License, or
  ~  *     (at your option) any later version.
  ~  *
  ~  *     This program is distributed in the hope that it will be useful,
  ~  *     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  *     GNU General Public License for more details.
  ~  *
  ~  *     You should have received a copy of the GNU General Public License along
  ~  *     with this program; if not, write to the Free Software Foundation, Inc.,
  ~  *     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  ~  *
  ~  * Contact information and current version at http://www.flying-snail.de/IPv6Droid
  ~  */
  ~
  -->

<resources>

    <string name="app_name">IPv6Droid</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_tic_reload">Reload tunnels</string>
    <string name="action_help">Help</string>

    <string name="password_set">&lt;set&gt;</string>
    <string name="password_unset">&lt;unset&gt;</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="main_activity_please_start">Please start</string>

    <string name="statistics_bytes">Bytes</string>
    <string name="statistics_packets">IP packets</string>
    <string name="statistics_mtu">MTU</string>
    <string name="statistics_native_routes">native Routes</string>
    <string name="statistics_vpn_routes">VPN Routes</string>
    <string name="statistics_ipv4">IPv4 addresses</string>
    <string name="statistics_ipv6">IPv6 addresses</string>
    <string name="robot">Robot</string>
    <string name="headline_received">from provider</string>
    <string name="headline_transmitted">from device</string>
    <string name="action_show_statistics">Statistics</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistics_timestamp">Last updated</string>
    <string name="copythreadexception">Copy thread ran into an exception</string>
    <string name="unexpected_runtime_exception">Unexpected problem, tunnel aborting</string>
    <string name="ayiyavpnservice_destroyed">"AyiyaVpnService getting destroyed"</string>
    <string name="ayiyavpnservice_revoked">"AyiyaVpnService's permission to run a VPN is revoked"</string>
    <string name="statistics_isrouted">Routes set to tunnel</string>
    <string name="statistics_isrouted_yes">yes</string>
    <string name="statistics_isrouted_no">no</string>
    <string name="statistics_native_dns">DNS Servers</string>
    <string name="statistics_vpn_dns">DNS Servers (VPN)</string>
    <string name="statistics_pause_between_bursts">Bursts pause</string>
    <string name="statistics_time_of_burst">Burst Dur.</string>
    <string name="statistics_packets_per_burst">Pckt./burst</string>
    <string name="statistics_bytes_per_burst">B./burst</string>
    <string name="title_activity_subscribe_tunnel">SubscribeTunnel</string>
    <string name="manual_setup_label">Self-hosted</string>
    <plurals name="user_has_subscription">
        <item quantity="one">You are subscribed to %d tunnel</item>
        <item quantity="other">You are subscribed to %d tunnels</item>
    </plurals>
    <string name="user_has_unparsable_subscription_status">Could not understand subscription status</string>
    <string name="subscribe_to_tunnel_service">Subscribe to Tunnel Service</string>
    <string name="user_not_subscribed">Not subscribed</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="technical_problem">Subscription failed - temporary problem contacting server</string>
    <string name="user_subscription_checking">Checking user subscription…</string>
    <string name="user_subscription_failed">Verification failed</string>
    <string name="user_subscription_starting_wizard">Starting Google subscription wizard…</string>
    <string name="user_subscription_purchase_done">Thank you for purchasing! Provisioning tunnels for you…</string>
    <string name="user_subscription_aborted">Subscription not successful, we\'re sorry. Don\'t hesitate to contact us with any question that concern you.</string>
    <string name="user_subscription_management_not_launched">"Could not launch Google Play subscription manager"</string>
    <string name="channel_errors_name">IPv6 Errors</string>
    <string name="channel_status_name">IPv6 Status</string>
    <string name="channel_errors_description">Error messages from IPv6 tunnel</string>
    <string name="channel_status_description">Current status of IPv6 tunnel</string>

    <string name="subscription">Purchased tunnels</string>
    <string name="manage_subscriptions">Here you can launch Google Play to review and manage (e.g. terminate) your tunnel subscription.</string>
    <string name="subscription_status">The following status is determined from the Google account that your device is linked to. Retrieving the status may take a few seconds. If valid until date is reached, subscription will be extended (with the monthly fee), unless you terminated the subscription.</string>
    <string name="subscriptions_manage_subscriptions">Manage Subscriptions</string>
    <string name="user_subscription_subscribe_hint">"Here you can subscribe to a set of 4 tunnels with a few clicks. The subscription process is entirely handled by Google, including credit card or other payment details. You will be shown the exact price for your region. First time users have a full 60 days free testing period! After the free period, the subscription is extended automatically each month, with the indicated monthly fee in the indicated currency.         <br /><br />         The service is subject to the following terms and conditions (tap to read): <br /><![CDATA[https://flyingsnail.de/svcdesc.html]]>     "</string>
    <string name="user_subscription_terms_link">I read and accept the terms and conditions referenced above</string>
    <string name="user_subscription_error_not_accepted">You must accept terms and conditions to subscribe</string>
    <string name="user_subscription_valid_until">Valid until</string>
    <string name="SubManStartingUp">starting up</string>
    <string name="SubManConnectionLost">lost connection</string>
    <string name="SubManEmptySKUdetails">no product details received</string>
    <string name="subscriptionPurchaseStarted">Google purchasing initiated</string>
    <string name="user_subscription_no_service">Google subscription service is not available at the moment. We will retry the attempt later.</string>
    <string name="user_subscription_no_service_on_this_device">Google subscription services are not available on this device - please contact support.</string>
    <string name="pref_header_experimental">Experimental settings</string>
    <string name="ipv6_test_host" translatable="false">2a06:1c40::309</string>
    <string name="certification_default_url_base" translatable="false">https://flyingsnail.de/services/services/</string>
    <string name="statistics_started_at">Started at</string>
    <string name="statistics_reconnects">Reconnects</string>
    <string name="vpnthread_interrupted">We\'re interrupted</string>
    <string name="pref_header_dtls_key_create">Create DTLS key and certificates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="key_name">Key name for creation</string>
    <string name="button_create_key">Create key</string>
    <string name="vpnservice_toast_cache_unreadable">Cannot read locally cached tunnels</string>
    <string name="certificate_signing_request">Certificate Signing Request</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="vpnservice_activity_connecting">Establish session</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_purchase_checking">Checking available purchases</string>
    <string name="user_consumed_purchases">No additional purchases available</string>
    <string name="description_no_billing">No Google billing</string>
    <string name="consume_purchase_explanation">You already purchased this service and did not use it yet. Click the following button to consume your purchase on this device.</string>
    <string name="consume_purchase_button_label">Use one purchased item</string>
    <string name="purchase_and_use_on_this_device">Purchase and use on this device</string>
    <string name="purchase_available_for_consumption">You already purchased a product to use on this device</string>
    <string name="subscription_label_renew_active">will renew</string>
</resources>
