<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription"
            android:textAppearance="@android:style/TextAppearance.Material.Display1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_status"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />

        <View
            style="@style/HorizontalLine"
            />

        <TextView
            android:id="@+id/subscriptionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_not_subscribed"
            android:textAlignment="viewStart"
            android:textAppearance="@style/HighlightedTextMedium" />

        <LinearLayout
            android:id="@+id/validUntilLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_subscription_valid_until"
                android:textAppearance="@style/HighlightedText"
                />

            <TextView
                android:id="@+id/validUntil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingLeft="10pt"
                android:paddingRight="0pt"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/HighlightedText"
                />

        </LinearLayout>

        <View
            style="@style/HorizontalLine"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_subscription_subscribe_hint"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />


        <CheckBox
            android:id="@+id/acceptTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:onClick="onAcceptTerms"
            android:text="@string/user_subscription_terms_link"
            android:textIsSelectable="true"/>

        <Button
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPurchaseSubsciption"
            android:text="@string/subscribe_to_tunnel_service"
            android:backgroundTint="@color/ipv6droid_green"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5pt" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_subscriptions"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onManageSubscriptions"
            android:text="@string/subscriptions_manage_subscriptions"
            android:backgroundTint="@color/ipv6droid_green"
            />

        <View
            style="@style/HorizontalLine"
            />


        <TextView
            android:id="@+id/labelSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20pt"
            android:text="@string/manual_setup_label"
            android:textAppearance="@android:style/TextAppearance.Material.Display1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:id="@+id/settingsButton"
            android:onClick="onOpenSettings" />

    </LinearLayout>
</ScrollView>