<!--
  ~ Copyright (c) 2015 Dr. Andreas Feldner.
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  ~
  ~ Contact information and current version at http://www.flying-snail.de/IPv6Droid
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:layout_margin="15dp"
    android:id="@+id/Frame"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headline_transmitted"
            android:id="@+id/head1"
            android:textStyle="bold"
            android:layout_column="1"
            android:layout_gravity="right"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headline_received"
            android:id="@+id/head2"
            android:textStyle="bold"
            android:layout_column="2"
            android:layout_gravity="right"
            android:paddingLeft="10dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_gravity="left"
            android:layout_column="0"
            android:text="@string/statistics_bytes" />

        <TextView
            android:layout_gravity="right"
            android:layout_column="1"
            android:id="@+id/statistics_bytes_transmitted"
            android:text="-"/>

        <TextView
            android:layout_gravity="right"
            android:layout_column="2"
            android:id="@+id/statistics_bytes_received"
            android:text="-" />

    </TableRow>
    <TableRow>

        <TextView
            android:text="@string/statistics_packets"
            android:layout_column="0"
            android:id="@+id/statistics_packets"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:id="@+id/statistics_packets_transmitted"
            android:text="-"
            android:layout_gravity="right" />

        <TextView
            android:layout_column="2"
            android:id="@+id/statistics_packets_received"
            android:text="-"
            android:layout_gravity="right" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/statistics_ipv4"
            android:layout_column="0"
            android:id="@+id/statistics_ipv4"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:id="@+id/statistics_myipv4"
            android:text="-"
            android:layout_gravity="right" />

        <TextView
            android:layout_column="2"
            android:id="@+id/statistics_brokeripv4"
            android:text="-"
            android:layout_gravity="right" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/statistics_ipv6"
            android:layout_column="0"
            android:id="@+id/statistics_ipv6"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:id="@+id/statistics_myipv6"
            android:text="[::]"
            android:paddingLeft="10dp"
            android:layout_gravity="left" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:id="@+id/statistics_brokeripv6"
            android:text="[..]"
            android:layout_gravity="right" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="@string/statistics_mtu"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:id="@+id/statistics_mtu"
            android:text="-"
            android:layout_gravity="right" />

    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="@string/statistics_routes"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:id="@+id/statistics_routes"
            android:text="-"
            android:layout_gravity="right" />

    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="@string/statistics_timestamp"
            android:layout_gravity="left" />

        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:id="@+id/statistics_timestamp"
            android:text="-"
            android:layout_gravity="right" />

    </TableRow>
</TableLayout>
