<!--
  ~ Copyright (c) 2013 Dr. Andreas Feldner.
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  ~
  ~ Contact information and current version at http://www.flying-snail.de/IPv6Droid
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Connect, should appear as action button -->
    <item android:id="@+id/action_connect"
          android:icon="@drawable/ic_action_connect"
          android:title="@string/action_connect"
          android:showAsAction="ifRoom" />
    <!-- Disconnect, should appear as action button -->
    <item android:id="@+id/action_disconnect"
          android:icon="@drawable/ic_action_disconnect"
          android:title="@string/action_disconnect"
          android:showAsAction="ifRoom" />
    <!-- Help, should always be in the overflow -->
    <item android:id="@+id/action_help"
        android:title="Help"
        android:orderInCategory="50"
        android:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
